--- a/conf/nginx/conf.d/test.conf
+++ b/conf/nginx/conf.d/test.conf
@@ -1,8 +1,8 @@
 server {
     listen       80;
 
-    access_log /var/www/html/nginx/access/nginx/access_log;
-    error_log  /var/www/html/nginx/error/error_log;
+#    access_log /var/www/html/nginx/access/nginx/access_log;
+#    error_log  /var/www/html/nginx/error/error_log;
 
     gzip  on;
     gzip_disable "msie6";
